[gd_scene load_steps=4 format=2]

[ext_resource path="res://day_screen/gui/inventory.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/default_theme.tres" type="Theme" id=2]
[ext_resource path="res://night_screen/gui/order_row.gd" type="Script" id=3]

[node name="OrderRow" type="HBoxContainer"]
margin_right = 256.0
margin_bottom = 14.0
size_flags_horizontal = 3
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inventory" parent="." instance=ExtResource( 1 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 0.0
margin_bottom = 14.0

[node name="WrongOrderLabel" type="Label" parent="."]
margin_left = 4.0
margin_right = 88.0
margin_bottom = 13.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ui_wrong_order"

[node name="PriceLabel" type="Label" parent="."]
margin_left = 92.0
margin_right = 256.0
margin_bottom = 13.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ui_price"
align = 2
